# opentelemetry-proto

./: README.md
opentelemetry/proto/metrics/v1/: BUILD.bazel
